--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "swr": "^2.2.2"
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "^20.5.7",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
@@ -24,6 +25,7 @@
     "@vitejs/plugin-react": "^4.0.4",
     "eslint": "^8.48.0",
     "eslint-config-standard-with-typescript": "^39.0.0",
+    "react-redux": "^8.1.2",
     "typescript": "^5.2.2",
     "vite": "^4.4.9",
     "vite-plugin-minify": "^1.5.2"
