--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "axios": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0",
-    "swr": "^2.2.2"
+    "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
     "@reduxjs/toolkit": "^1.9.5",
